point at my datepicker for testing

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.1",
     "react-datepicker": "^0.13.0",
-    "react-time-select": "^1.0.2"
+    "react-time-select": "cameronviner/react-datepicker"
   },
   "devDependencies": {
     "babel": "^5.8.23",
