--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "make-up src test doc"
   },
   "browserify": {
-    "transform": ["brfs"]
+    "transform": [
+      "brfs"
+    ]
   },
   "author": "Ollie Buck <ollie.buck@holidayextras.com>",
   "license": "ISC",
@@ -24,8 +26,9 @@
   "dependencies": {
     "moment": "^2.10.6",
     "react": "^0.14.0",
-    "react-bootstrap": "^0.26.1",
+    "react-bootstrap": "^0.27.3",
     "react-datepicker": "^0.13.0",
+    "react-dom": "^0.14.1",
     "react-time-select": "cameronviner/react-datepicker"
   },
   "devDependencies": {
